# Python-Machine-Learning-by-Example-Fourth-Edition

./: .gitignore  CLAUDE.md  FLEXIBLE_SEARCH_GUIDE.md  README.md  analyze_flexible_search_results.qmd  config.py  flexible_hyperparameter_search.py  model_cache.py  pyproject.toml
ch2/: Raisin NB.ipynb  ch2_naives_bayes.ipynb  ch2_part1.ipynb  ch2_part2.ipynb  ch2_part2.py  ch2_part2_movie_dat.ipynb  ch2_part2_my_mods.py  customer_behaviour.qmd  ham_spam.ipynb  ham_spam.py  heart_disease.ipynb  heart_disease.qmd  heart_disease_2.py  income_classifier.qmd  movie_recommendation.qmd  naive_bayes_datacamp.ipynb  naive_bayes_iris_data.qmd  naive_bayes_template.py  naive_bayes_template_gemini.ipynb  naive_bayes_template_gemini.qmd  raisins_naive_bayes.qmd  wheat_gnb.py
ch3/: analyze_search_results.qmd  ch3-test-codes.py  ch3-test-codes.qmd  decision-tree-exercise.qmd  decision-tree-scikit.qmd  decision-tree-summary.md  decision-tree-with-caching-example.qmd  hyperparameter_search.py
ch4/: ch4_part1.py
