[project]
name = "python-machine-learning-by-example-fourth-edition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.17"
dependencies = [
    "kaggle>=1.7.4.2",
    "kagglehub>=0.3.11",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotnine>=0.14.5",
    "pyhere>=1.0.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
